--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: cobifnirs
 Title: Import And Process fNIRS Data from COBI Studio
 Version: 0.0.0.9000
 Authors@R: 
-    person("Christopher", "Wilson", , "christopher.wilson@tees.ac.uk", role = c("aut", "cre"),
+    person("Christopher", "Wilson", "J" , "christopher.wilson@tees.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7155-0662"))
 Description: What the package does (one paragraph).
-License: MIT + file LICENSE
+License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
