--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,5 @@ Imports:
     stringr,
     tibble,
     readr
-URL: https://github.com/christopherjwilson/cobifnirs
+URL: https://github.com/christopherjwilson/cobifnirs, https://christopherjwilson.github.io/cobifnirs/
 BugReports: https://github.com/christopherjwilson/cobifnirs/issues
