--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,7 @@
 url: https://christopherjwilson.github.io/cobifnirs/
 template:
   bootstrap: 5
+  opengraph:
+    image: images/plot1.png
+    title: "cobifnirs"
 
