--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,8 @@ pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles: {}
-last_built: 2024-04-03T12:53Z
+last_built: 2024-04-03T15:07Z
+urls:
+  reference: https://christopherjwilson.github.io/cobifnirs/reference
+  article: https://christopherjwilson.github.io/cobifnirs/articles
 
