--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,5 @@ BugReports: https://github.com/christopherjwilson/cobifnirs/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
