--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: 3.1.1
+pandoc: '3.2'
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles: {}
-last_built: 2024-04-03T20:32Z
+last_built: 2025-02-28T13:25Z
 urls:
   reference: https://christopherjwilson.github.io/cobifnirs/reference
   article: https://christopherjwilson.github.io/cobifnirs/articles
