fixed error in import funciton

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(signal_summary)
 import(dplyr)
 import(ggnewscale)
 import(ggplot2)
-import(gsignal)
 import(janitor)
 import(readr)
 import(stringr)
@@ -24,3 +23,5 @@ import(tidyr)
 import(zoo)
 importFrom(dplyr,case_when)
 importFrom(dplyr,mutate)
+importFrom(gsignal,filter_zi)
+importFrom(gsignal,fir1)
