--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,11 @@ export(add_brodmanns)
 export(add_markers)
 export(apply_lowpass)
 export(apply_mbll)
+export(apply_smar)
+export(calculate_glm)
 export(create_delta_od)
+export(create_regressor)
+export(get_canonical_hrf)
 export(get_event_data)
 export(get_ext_values)
 export(import_nirs)
@@ -16,12 +20,11 @@ import(dplyr)
 import(ggnewscale)
 import(ggplot2)
 import(janitor)
-import(readr)
 import(stringr)
 import(tibble)
 import(tidyr)
-import(zoo)
 importFrom(dplyr,case_when)
 importFrom(dplyr,mutate)
-importFrom(gsignal,filter_zi)
-importFrom(gsignal,fir1)
+importFrom(gsignal,butter)
+importFrom(gsignal,filtfilt)
+importFrom(zoo,na.approx)
