--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,8 @@
-pandoc: '3.2'
-pkgdown: 2.0.7
+pandoc: 3.6.3
+pkgdown: 2.1.3
 pkgdown_sha: ~
 articles: {}
-last_built: 2025-02-28T13:25Z
+last_built: 2026-02-10T13:37Z
 urls:
   reference: https://christopherjwilson.github.io/cobifnirs/reference
   article: https://christopherjwilson.github.io/cobifnirs/articles
-
