added baseline correction and time driven event epoch
modified the epoch to be based on time rather than samples to allow for baseline correction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_brodmanns)
 export(add_markers)
+export(apply_baseline_correction)
 export(apply_lowpass)
 export(apply_mbll)
 export(apply_smar)
@@ -12,6 +13,7 @@ export(get_canonical_hrf)
 export(get_event_data)
 export(get_ext_values)
 export(import_nirs)
+export(prepare_mlm_data)
 export(remove_ambient)
 export(remove_channels)
 export(signal_plot)
