--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     readr,
     stats,
     ggnewscale,
-    gsignal
+    gsignal,
+    zoo
 URL: https://github.com/christopherjwilson/cobifnirs, https://christopherjwilson.github.io/cobifnirs/
 BugReports: https://github.com/christopherjwilson/cobifnirs/issues
 Suggests: 
